--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-      <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials">
+      <link rel="manifest" href="/site.webmanifest">
 
     <link rel="stylesheet" href="/src/@core/icons/style.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script rel="preload" type="module" src="/src/main.js"></script>
   </body>
 </html>
