--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script rel="preload" type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
